Fixed nav breaking to new line for logged in users on tablet.

--- a/scss/_main/_chrome.scss
+++ b/scss/_main/_chrome.scss
@@ -178,6 +178,10 @@
       }
     }
 
+    .searchfield {
+      margin-left: 0;
+    }
+
     input[type="search"] {
       margin: 0.2rem 0;
       padding-top: 0.3rem;
